# mediaPedia

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_add_review_scores.sql  003_drop_pinned.sql  004_add_watch_providers.sql
src-tauri/permissions/autogenerated/: get_keys.toml  reset_keys.toml  set_keys.toml  toggle_tray.toml
src-tauri/src/: main.rs
src/components/: DetailView.tsx  Header.tsx  PinnedSection.tsx  SearchInput.tsx  SettingsModal.tsx  ShortcutsModal.tsx  SuggestionsList.tsx  TrendingSection.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  kbd.tsx  scroll-area.tsx
src/lib/: db.ts  links.ts  operators.ts  providers.ts  search.ts  suggestions.ts  types.ts  utils.ts
src/store/: useAppStore.ts
