[package]
name = "mediapedia"
version = "0.1.0"
description = "MediaPedia"
authors = ["MediaPedia"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5.4", features = ["api-all", "system-tray"] }
tauri-plugin-sql = { version = "0.5.0", features = ["sqlite"] }
keyring = "2.3.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
