[package]
name = "mediapedia"
version = "0.1.0"
description = "MediaPedia"
authors = ["MediaPedia"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
keyring = "2.3.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
